fix: checkbox alignment

--- a/frontend/src/style/checkout.css
+++ b/frontend/src/style/checkout.css
@@ -52,6 +52,8 @@
 .checkbox-area {
   width: 48px;
   aspect-ratio: 1/1;
+  display: flex;
+  align-items: center;
 }
 
 .checkout-form-input.checkbox {
